force-app/main/default/objects/PIDR__c/PIDR__c.object-meta.xml
<CustomObject>
    <label>Personal Information Data Request</label>
    <nameField>
        <displayFormat>PIDR-{00000}</displayFormat>
        <label>PIDR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personal Information Data Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>