force-app/main/default/objects/PIDR__c/fields/Customer_Region__c.field-meta.xml
<CustomField>
    <fullName>Customer_Region__c</fullName>
    <formula>PGi_Company__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Region</label>
    <type>Text</type>
</CustomField>