force-app/main/default/objects/PIDR__c/fields/Data_Details__c.field-meta.xml
<CustomField>
    <fullName>Data_Details__c</fullName>
    <label>Data Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>