force-app/main/default/objects/PIDR__c/fields/Employee_Location__c.field-meta.xml
<CustomField>
    <fullName>Employee_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Location</label>
    <referenceTo>Locations__c</referenceTo>
    <relationshipName>GDPR_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>