force-app/main/default/objects/PIDR__c/fields/Fulfillment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Due_Date__c</fullName>
    <description>Date of which the request should be completed.</description>
    <label>Fulfillment Due Date</label>
    <type>Date</type>
</CustomField>