force-app/main/default/objects/PIDR__c/fields/Open_Cases_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Cases_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Open Cases Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>