force-app/main/default/objects/PIDR__c/fields/PGi_Company__c.field-meta.xml
<CustomField>
    <fullName>PGi_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PGi Company</label>
    <referenceTo>PGi_Company__c</referenceTo>
    <relationshipName>GDPR_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>