force-app/main/default/objects/PIDR__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Port</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Objection</fullName>
            </value>
            <value>
                <fullName>Restriction</fullName>
            </value>
            <value>
                <fullName>Automated Decision Making</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>