force-app/main/default/objects/PIDR__c/fields/Requested_Notes__c.field-meta.xml
<CustomField>
    <fullName>Requested_Notes__c</fullName>
    <label>Requested Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>