force-app/main/default/objects/PIDR__c/recordTypes/Customer_Request_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Customer_Request_Record_Type</fullName>
    <active>true</active>
    <description>For PGi Customer Requests Only</description>
    <label>Customer Request Record Type</label>
</RecordType>