force-app/main/default/objects/PIDR__c/recordTypes/Employee_Request_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Employee_Request_Record_Type</fullName>
    <active>true</active>
    <description>Employee Requests Only</description>
    <label>Employee Request Record Type</label>
</RecordType>