force-app/main/default/objects/PIDR__c/validationRules/Email_or_Phone_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_or_Phone_Required</fullName>
    <active>true</active>
    <description>An Email Address or Phone Number is required to save a record.</description>
    <errorConditionFormula>AND(
 ISBLANK(Email_Address__c),
 ISBLANK(Phone__c)
)</errorConditionFormula>
    <errorMessage>An Email Address or Phone Number is required to save this record.</errorMessage>
</ValidationRule>