force-app/main/default/objects/PIDR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Open_Cases_Count__c</columns>
    <columns>Open_FinReqs_Count__c</columns>
    <columns>Open_RFCs_Count__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>