force-app/main/default/objects/PIDR__c/listViews/PGi_GDPR_Legal_GDPR.listView-meta.xml
<ListView>
    <fullName>PGi_GDPR_Legal_GDPR</fullName>
    <filterScope>Queue</filterScope>
    <label>PGi-GDPR Legal</label>
    <queue>PGi_GDPR_Legal</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>